--- a/scss/teaser.scss
+++ b/scss/teaser.scss
@@ -65,7 +65,8 @@ h5 {font-family: Verdana, sans-serif; font-size: 26px; line-height: 30px;}	*/
 div#videotrailer {
 	width: 480px; 
 	height: 160px; // 320
-	margin: 0 auto 140px auto;}
+	margin: 0 auto 140px auto;
+}
 	
 div#videotrailer iframe {	
 	-webkit-box-shadow: 0px 0px 14px 1px #666;
